force-app/main/default/objects/Monitoring_Summary__c/Monitoring_Summary__c.object-meta.xml
<CustomObject>
    <label>Monitoring Summary</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Monitoring Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monitoring Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>