force-app/main/default/objects/Monitoring_Summary__c/fields/Anomali_Category__c.field-meta.xml
<CustomField>
    <fullName>Anomali_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Anomali Category</label>
    <referenceTo>Anomali_Category__c</referenceTo>
    <relationshipLabel>Monitoring Summary</relationshipLabel>
    <relationshipName>Monitoring_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>