force-app/main/default/objects/Monitoring_Summary__c/fields/Area_Description__c.field-meta.xml
<CustomField>
    <fullName>Area_Description__c</fullName>
    <formula>User__r.SCC_Area_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Description</label>
    <type>Text</type>
</CustomField>