force-app/main/default/objects/Monitoring_Summary__c/fields/Branch_API__c.field-meta.xml
<CustomField>
    <fullName>Branch_API__c</fullName>
    <label>Branch API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>