force-app/main/default/objects/Monitoring_Summary__c/fields/Branch_Unit_2__c.field-meta.xml
<CustomField>
    <fullName>Branch_Unit_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Unit</label>
    <referenceTo>Branch_Unit__c</referenceTo>
    <relationshipLabel>Monitoring Summary</relationshipLabel>
    <relationshipName>Monitoring_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>