force-app/main/default/objects/Monitoring_Summary__c/fields/Branch_Unit__c.field-meta.xml
<CustomField>
    <fullName>Branch_Unit__c</fullName>
    <formula>Branch_Unit_2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Unit</label>
    <type>Text</type>
</CustomField>