force-app/main/default/objects/Monitoring_Summary__c/fields/Cost_Center_Desc__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_Desc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost_Center_Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>