force-app/main/default/objects/Monitoring_Summary__c/fields/Divisi__c.field-meta.xml
<CustomField>
    <fullName>Divisi__c</fullName>
    <formula>User__r.SCC_Cost_Center_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Divisi</label>
    <type>Text</type>
</CustomField>