force-app/main/default/objects/Monitoring_Summary__c/fields/is_konsolidasi__c.field-meta.xml
<CustomField>
    <fullName>is_konsolidasi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_konsolidasi</label>
    <type>Checkbox</type>
</CustomField>