force-app/main/default/objects/Monitoring_Summary__c/fields/Kanwil__c.field-meta.xml
<CustomField>
    <fullName>Kanwil__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kanwil</label>
    <referenceTo>Branch_Unit__c</referenceTo>
    <relationshipLabel>Monitoring Summary (Kanwil)</relationshipLabel>
    <relationshipName>Monitoring_Summary1</relationshipName>
    <type>Lookup</type>
</CustomField>