force-app/main/default/objects/Monitoring_Summary__c/fields/Kode_Cabang__c.field-meta.xml
<CustomField>
    <fullName>Kode_Cabang__c</fullName>
    <formula>RIGHT(&apos;00000&apos;+  Branch_Unit_2__r.Kode_Cabang__c ,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kode Cabang</label>
    <type>Text</type>
</CustomField>