force-app/main/default/objects/Monitoring_Summary__c/fields/Kode_Kanwil__c.field-meta.xml
<CustomField>
    <fullName>Kode_Kanwil__c</fullName>
    <formula>Kanwil__r.BranchCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kode Kanwil</label>
    <type>Text</type>
</CustomField>