force-app/main/default/objects/Monitoring_Summary__c/fields/Main_Branch__c.field-meta.xml
<CustomField>
    <fullName>Main_Branch__c</fullName>
    <formula>Branch_Unit_2__r.Kode_Cabang__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Branch</label>
    <type>Text</type>
</CustomField>