force-app/main/default/objects/Monitoring_Summary__c/fields/Main_Branch_Description__c.field-meta.xml
<CustomField>
    <fullName>Main_Branch_Description__c</fullName>
    <formula>Branch_Unit_2__r.Nama_Cabang__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Branch Description</label>
    <type>Text</type>
</CustomField>