force-app/main/default/objects/Monitoring_Summary__c/fields/Message_API__c.field-meta.xml
<CustomField>
    <fullName>Message_API__c</fullName>
    <label>Message API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>