force-app/main/default/objects/Monitoring_Summary__c/fields/Nama_Cabang__c.field-meta.xml
<CustomField>
    <fullName>Nama_Cabang__c</fullName>
    <formula>Branch_Unit_2__r.Nama_Cabang__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nama Cabang</label>
    <type>Text</type>
</CustomField>