force-app/main/default/objects/Monitoring_Summary__c/fields/Orgeh__c.field-meta.xml
<CustomField>
    <fullName>Orgeh__c</fullName>
    <formula>User__r.SCC_Orgeh__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orgeh</label>
    <type>Text</type>
</CustomField>