force-app/main/default/objects/Monitoring_Summary__c/fields/Orgeh_API__c.field-meta.xml
<CustomField>
    <fullName>Orgeh_API__c</fullName>
    <label>Orgeh API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>