force-app/main/default/objects/Monitoring_Summary__c/fields/Queue_RO__c.field-meta.xml
<CustomField>
    <fullName>Queue_RO__c</fullName>
    <formula>User__r.Queue_RO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue RO</label>
    <type>Text</type>
</CustomField>