force-app/main/default/objects/Monitoring_Summary__c/fields/Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Name__c</fullName>
    <formula>Branch_Unit_2__r.Region_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Name</label>
    <type>Text</type>
</CustomField>