force-app/main/default/objects/Monitoring_Summary__c/fields/Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Sub_Area__c</fullName>
    <formula>User__r.SCC_Sub_Area_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Area</label>
    <type>Text</type>
</CustomField>