force-app/main/default/objects/Monitoring_Summary__c/fields/Total_Access_Not_Create_Case__c.field-meta.xml
<CustomField>
    <fullName>Total_Access_Not_Create_Case__c</fullName>
    <label>Total Access Not Create Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>