force-app/main/default/objects/Monitoring_Summary__c/fields/Total_Access_Outside_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Access_Outside_Business_Hours__c</fullName>
    <label>Total Access Outside Business Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>