force-app/main/default/objects/Monitoring_Summary__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Anomali_Category__c</columns>
    <columns>Branch_Code__c</columns>
    <columns>Branch_Unit_2__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date__c</columns>
    <columns>Divisi__c</columns>
    <columns>Frequency_Access__c</columns>
    <columns>User__c</columns>
    <columns>Total__c</columns>
    <columns>Kode_Kanwil__c</columns>
    <columns>Kanwil__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>